tests/sksl/errors/Unreachable.glsl

void call_after_return_v() {
    return;
    call_after_return_v();
}
